crates/jsonschema-codegen/tests/ui/invalid_min_length_value.stderr
error: "x" is not of type "integer"
 --> tests/ui/invalid_min_length_value.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"type":"string","minLength":"x"}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
