crates/jsonschema-codegen/tests/ui/invalid_min_length_value.rs
#[jsonschema::validator(schema = r#"{"type":"string","minLength":"x"}"#)]
struct Validator;

fn main() {}
